Fix spacing of iconOnly plain buttons

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -387,6 +387,7 @@ $stacking-order: (
   }
 
   &.iconOnly {
+    margin: -0.5 * ($min-height - icon-size());
     @include recolor-icon(var(--p-icon));
 
     &:hover {
